--- a/style.css
+++ b/style.css
@@ -1,7 +1,55 @@
 div.players {
  display: inline;   
+ border: 1px solid black;
+ padding: 4px;
 }
-div.click_counter {
-    display: inline;
-    border: 1em
+div.annoucePlayer{
+    margin:5px 4px 4px 5px;
+}
+div.square {
+    border: 1px solid black;
+    padding: 10px;
+    height: 100px;
+    width: 100px; 
+}
+div.circle {
+    border: 1px solid black;
+    border-radius: 120px;
+    height: 100%;
+    width: 100%;
+    
+}
+button {
+display: inline;
+padding: 5px 10px;
+font-size: 15px;
+cursor:pointer;
+text-align: center;
+text-decoration: none;
+outline:none;
+color:#fff;
+background-color: #4CAF50;
+border: none;
+border-radius: 5px;
+box-shadow: 0 1px #999;
+margin: 5px;
+}
+button:hover {background-color: #3e8e41}
+
+button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 2px #666;
+  transform: translateY(4px);
+}
+.specialButton{
+    border: 1px solid black;
+    border-radius: 120px;
+    height: 25%;
+    width: 25%;
+    margin: 37.5px;
+}
+
+div {
+    margin: 2px;
+    font-size: 18px;
 }
