--- a/style.css
+++ b/style.css
@@ -143,6 +143,16 @@ body {
     background: #ddd;
     margin-top: 30px;
 }
+textArea {
+    margin: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
+input {
+    margin: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
 .commentSection {
     display: block;
     padding: 5px;
