--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ input {
     font-size: 18px;
 }
 
-button {
+button.table {
     position: relative;
     padding: 5px 10px;
     font-size: 15px;
