--- a/style.css
+++ b/style.css
@@ -173,7 +173,9 @@ div.circle {
     border-radius: 50%;
     height: 100px;
     width: 100px;
+    padding: 2px;
     position: relative;
+    margin: 2px;
     
 }
 
